[Solution] implement List by ArrayList. beats 44.6%